Serialization simplified for Redis Cache demo