@@ -1,13 +1,13 @@
 package de.bsi.webflux.cache;
 
-import de.bsi.webflux.database.EmployeeDAO;
-import de.bsi.webflux.database.ReactiveEmployeeRepository;
+import java.util.List;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
-import java.util.stream.Collectors;
+import de.bsi.webflux.database.EmployeeDAO;
+import de.bsi.webflux.database.ReactiveEmployeeRepository;
 
 @Service
 @Cacheable(cacheNames = EmployeeCacheService.EMPLOYEE_CACHE)
@@ -18,6 +18,6 @@ public class EmployeeCacheService {
     @Autowired private ReactiveEmployeeRepository mongoRepo;
 
     public List<EmployeeDAO> getAllEmployees() {
-        return mongoRepo.findAll().toStream().collect(Collectors.toList());
+        return mongoRepo.findAll().toStream().toList();
     }
 }
